; ModuleID = '/home/carl/AnghaBench/toxcore/toxcore/extr_util.c_unix_time_update.c'
source_filename = "/home/carl/AnghaBench/toxcore/toxcore/extr_util.c_unix_time_update.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@unix_base_time_value = common dso_local global i64 0, align 8
@unix_time_value = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @unix_time_update() #0 {
  %1 = load i64, i64* @unix_base_time_value, align 8
  %2 = icmp eq i64 %1, 0
  br i1 %2, label %3, label %8

3:                                                ; preds = %0
  %4 = call i64 @time(i32* null)
  %5 = call i64 (...) @current_time_monotonic()
  %6 = udiv i64 %5, 1000
  %7 = sub i64 %4, %6
  store i64 %7, i64* @unix_base_time_value, align 8
  br label %8

8:                                                ; preds = %3, %0
  %9 = call i64 (...) @current_time_monotonic()
  %10 = udiv i64 %9, 1000
  %11 = load i64, i64* @unix_base_time_value, align 8
  %12 = add i64 %10, %11
  store i64 %12, i64* @unix_time_value, align 8
  ret void
}

declare dso_local i64 @time(i32*) #1

declare dso_local i64 @current_time_monotonic(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
